--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "symfony/framework-bundle": "~3.0|~4.0|~5.0",
-        "symfony/form": "~3.0|~4.0|~5.0",
-        "symfony/console": "~3.0|~4.0|~5.0",
+        "php": ">=7.1",
+        "symfony/framework-bundle": "~3.0|~4.0|~5.0|~6.0",
+        "symfony/form": "~3.0|~4.0|~5.0|~6.0",
+        "symfony/console": "~3.0|~4.0|~5.0|~6.0",
         "symfony/mime": "~4.0|~5.0",
         "pimple/pimple": "~3.0",
         "monolog/monolog": "~1.4|~2.0",
@@ -22,7 +22,7 @@
         "league/flysystem-cached-adapter": "^1.0.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "9.5.11"
     },
     "autoload": {
         "psr-4": {
